--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@
     --dark-green: #999d82;
     --white: #fff7e7;
     --black: #181010;
+    --fsnav:1.25rem;
     --fs1:1.25rem;
     --fs2:1.4rem;
     --fs3:1.6rem;
@@ -119,6 +120,7 @@ em{
 nav{
     position:fixed;
     display: inline-flex;
+    font-size: var(--fsnav);
     height:10%;
     width:100%;
     top: 0;
@@ -237,7 +239,43 @@ footer{
 
 /* 5. Media Query Styling */
 
-/*max height?*/
 @media (max-width:800px){
+    --fs1:1.45rem;
+    --fs2:1.6rem;
+    --fs3:1.8rem;
+    --fs4:2rem;
+    --fs5:3rem;
    
+    body{
+       line-height: 1.6em;
+   }
+
+   mark{
+       margin-top: 2%;
+       margin-bottom: 2%;
+   }
+
+   nav li{
+       padding-left: 2%;
+   }
+
+   .welcome-section{
+       display:flex;
+       flex-flow: column wrap;
+       justify-content: center;
+       padding-left: 10%;
+   }
+
+   .welcome-section-img{
+       height:40vh;
+       width: fit-content;
+       margin:2% 0 10% 0;
+   }
+
+    
+   .objectives img{
+    width:100vw;
+    height: auto;   
+    margin: 2% 0 2% 0;
+   }
 }
